<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="40dp"
    tools:context=".SignupActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_signup_information"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/btn_signup_complete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_signup_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/signup_id"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/et_signup_id"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_signup_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_siginup_rectangle"
                android:hint="아이디 입력"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingHorizontal="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_signup_id" />

            <TextView
                android:id="@+id/tv_signup_pw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/signup_pw"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/et_signup_pw"
                app:layout_constraintTop_toBottomOf="@id/et_signup_id" />

            <EditText
                android:id="@+id/et_signup_pw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_siginup_rectangle"
                android:hint="비밀번호 입력"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingHorizontal="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_signup_pw" />

            <TextView
                android:id="@+id/tv_signup_nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/signup_nickname"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/et_signup_nickname"
                app:layout_constraintTop_toBottomOf="@id/et_signup_pw" />

            <EditText
                android:id="@+id/et_signup_nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_siginup_rectangle"
                android:hint="닉네임 입력"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingHorizontal="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_signup_nickname" />

            <TextView
                android:id="@+id/tv_signup_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/signup_gender"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/et_signup_nickname"
                app:layout_constraintTop_toBottomOf="@id/et_signup_nickname" />


            <com.google.android.material.chip.Chip
                android:id="@+id/chip_signup_women"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/blue_50_main"
                android:text="여성"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/chip_signup_men"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_signup_gender" />


            <com.google.android.material.chip.Chip
                android:id="@+id/chip_signup_men"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/blue_50_main"
                android:text="남성"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/chip_signup_women"
                app:layout_constraintTop_toBottomOf="@id/tv_signup_gender" />

            <TextView
                android:id="@+id/tv_signup_birth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/signup_birth"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/et_signup_birth"
                app:layout_constraintTop_toBottomOf="@id/chip_signup_women" />

            <EditText
                android:id="@+id/et_signup_birth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_siginup_rectangle"
                android:hint="YYYY . MM . DD"
                android:inputType="date"
                android:minHeight="48dp"
                android:paddingHorizontal="15dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_signup_birth" />

            <TextView
                android:id="@+id/tv_signup_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/signup_height"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/et_signup_height"
                app:layout_constraintTop_toBottomOf="@id/et_signup_birth" />

            <EditText
                android:id="@+id/et_signup_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_siginup_rectangle"
                android:hint="신장 입력(cm)"
                android:inputType="number"
                android:minHeight="48dp"
                android:paddingHorizontal="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_signup_height" />

            <TextView
                android:id="@+id/tv_signup_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/signup_weight"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/et_signup_weight"
                app:layout_constraintTop_toBottomOf="@id/et_signup_height" />

            <EditText
                android:id="@+id/et_signup_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/et_siginup_rectangle"
                android:hint="체중 입력(kg)"
                android:inputType="number"
                android:minHeight="48dp"
                android:paddingHorizontal="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_signup_weight" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <Button
        android:id="@+id/btn_signup_complete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:background="@color/yellow_main"
        android:paddingVertical="10dp"
        android:text="완료"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nsv_signup_information" />


</androidx.constraintlayout.widget.ConstraintLayout>